1998-12-11  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* Makefile.am: Removed setf.scm.

	* setf.scm: Removed.  1. It was buggy.  2. It was unschemey.
	(These shortcomings were my fault.)

1998-12-10  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm (environment-module): New procedure.

1998-12-07  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* Makefile.am: Added setf.scm.

1998-12-05  Christian Lynbech  <chl@tbit.dk>

	* setf.scm: New file.  Adds the new forms `setf!' and `setter'
	which implements generalized references a la Common LISP.

1998-12-02  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* boot-9.scm (process-define-module): Added new specifier
	:autoload MODULENAME BINDINGS to the define-module form.
	The autoload specifier tells the module system to load the module
	MODULENAME at the first occasion that any variable with its name
	among BINDINGS is referenced.
	(make-autoload-interface): New procedure:  Constructs a stand-in
	for the public interface for the module to be autoloaded.

1998-12-01  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm (*suppress-old-style-hook-warning*): Set this to #t
	if you don't want the old style hook warnings.

1998-12-01  Christian Lynbech  <chl@tbit.dk>

	* boot-9.scm (try-using-libtool-name): Fix check on dlname to make
	sure that it isn't empty, as it is when we are only buidling
	static libraries.

1998-11-27  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* session.scm (arity): New procedure.

1998-11-26  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm: Use run-hook instead of run-hooks everywhere.

1998-11-26  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* boot-9.scm (run-hooks, add-hook!, remove-hook!): Added temporary
	code for backward compatibility until people have had time to
	adapt to the new hooks.

1998-11-23  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* boot-9.scm (beautify-user-module!): Beautify also if public
	interface is set to the module itself.  In this way we can use